--- a/Search+Function/buildspec.yml
+++ b/Search+Function/buildspec.yml
@@ -5,10 +5,10 @@ phases:
       python: 3.10
   build:
     commands:
-      - aws cloudformation package --template-file search-gateway.yaml --s3-bucket artifacts-bucket-gl --output-template-file gateway.yaml
+      - aws cloudformation package --template-file search-function.yaml --s3-bucket artifacts-bucket-gl --output-template-file gateway.yaml
 
 artifacts:
   type: zip
   files:
-    - search-gateway.yaml
+    - search-function.yaml
     - gateway.yaml
