--- a/PDFtoTXT/pdftotxt.yaml
+++ b/PDFtoTXT/pdftotxt.yaml
@@ -16,4 +16,5 @@ Resources:
         Variables:
           TARGET_BUCKET: gl-inter-store
       Layers:
-        - 'arn:aws:lambda:ap-northeast-1:844028273225:layer:tika:1'
+        - 'arn:aws:lambda:ap-northeast-1:844028273225:layer:aws-auth:1'
+        - 'arn:aws:lambda:ap-northeast-1:844028273225:layer:appbase:1'
